fix for bib file

--- a/papercharmrun.bib
+++ b/papercharmrun.bib
@@ -516,7 +516,7 @@ eprint         = "1410.4412",
 archivePrefix  = "arXiv",
 primaryClass   = "hep-ph",
 reportNumber   = "DESY-14-188, DESY-REPORT-14-188, FERMILAB-PUB-14-603-CMS",
-SLACcitation   = "%%CITATION = ARXIV:1410.4412;%%"
+SLACcitation   = "%%CITATION = ARXIV:1410.4412;%%",
 url            = xfitter.org
 }
 @article{Paukkunen:2014zia,
