--- a/papercharmrun.bib
+++ b/papercharmrun.bib
@@ -566,3 +566,36 @@ primaryClass   = "hep-ph",
 reportNumber   = "OUTP-16-10P, DESY-16-078",
 SLACcitation   = "%%CITATION = ARXIV:1605.01946;%%"
 }
+@article{Bhattacharya:2015jpa,
+      author         = "Bhattacharya, Atri and Enberg, Rikard and Reno, Mary Hall
+                        and Sarcevic, Ina and Stasto, Anna",
+      title          = "{Perturbative charm production and the prompt atmospheric
+                        neutrino flux in light of RHIC and LHC}",
+      journal        = "JHEP",
+      volume         = "06",
+      year           = "2015",
+      pages          = "110",
+      doi            = "10.1007/JHEP06(2015)110",
+      eprint         = "1502.01076",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "NORDITA-2015-9",
+      SLACcitation   = "%%CITATION = ARXIV:1502.01076;%%"
+}
+@article{Lisovyi:2015uqa,
+      author         = "Lisovyi, Mykhailo and Verbytskyi, Andrii and Zenaiev,
+                        Oleksandr",
+      title          = "{Combined analysis of charm-quark fragmentation-fraction
+                        measurements}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C76",
+      year           = "2016",
+      number         = "7",
+      pages          = "397",
+      doi            = "10.1140/epjc/s10052-016-4246-y",
+      eprint         = "1509.01061",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "MPP-2015-257",
+      SLACcitation   = "%%CITATION = ARXIV:1509.01061;%%"
+}
