--- a/papercharmrun.tex
+++ b/papercharmrun.tex
@@ -257,22 +257,34 @@ I have not a specific suggestion for a system of cuts, but, in general, the more
 \section{Possible applications}
 \label{appli}
 
-\subsection{PDF fits}
+%\subsection{PDF fits}
 
-1) Qualitative discussion on possible outcome from the PROSA fit redone with the modified MCFM and all the rest the same: does it happens something to the fitted charm mass ? And the $\chi^2$ ? And the PDF uncertainty band ? 
-I think this is not a new PROSA paper, which would indeed require to add new data in the fit, etc....but more an exercise, showing if using running mass, can have an impact or not. 
-\\ 
-\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
-\\
-One of the possible applications of the calculations for heavy-quark hadroproduction with the \msbar mass definition could be PDF fits which use heavy-flavour measurements from the LHC to constrain the gluon distribution at low values of $x$~\cite{Zenaiev:2015rfa,Gauld:2015yia,Gauld:2016kpd}. Because of the large scale dependence of the NLO calculations for charm hadroproduction, in such fits it seems feasible to include only ratios of cross sections, which are constructed using measurements at different values of rapidity and/or transverse momentum, or at different centre-of-mass energies. As an example, in the PROSA analysis~\cite{Zenaiev:2015rfa} ratios of charm and bottom hadron production cross sections~\cite{Aaij:2013mga,Aaij:2013noa} as a function of rapidity to the cross section in the $3 < y < 3.5$ interval for each $p_T$ bin were used, together with the inclusive DIS data from HERA~\cite{Aaron:2009aa,Abramowicz:1900rp,Abramowicz:2014zub}. These ratios afforded a reduced scale dependence, but at the same time they have reduced sensitivity to the heavy-quark mass. We repeat the PROSA analysis using the \msbar heavy-quark masses both in the calculations of the DIS structure functions and charm and bottom hadroproduction cross sections, while all other settings are as in Ref.~\cite{Zenaiev:2015rfa}, and observe only small impact on $\chi^2$ and fitted PDFs, which are well within the uncertainties. Even these small differences are driven mainly by the change in the predictions for the HERA data, because the LHCb data in the format of the normalised cross sections do not provide notable sensitivity neither to the heavy-quark mass scheme, not to the value of the heavy-quark mass. As a result, the fitted \msbar masses come out compatible with the results obtained in Refs.~\cite{Abramowicz:1900rp,Abramowicz:2014zub,Bertone:2016ywq,H1:2018flt} where the HERA data alone were analysed to determine the heavy-quark \msbar masses.
-\\
-\\
-2) Inclusion of measurements of total cross-sections for charm hadroproduction
-in (future) NLO and NNLO PDF fits: discussion at qualitative level. 
-\\ 
-\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
-\\
-The NLO predictions for differential charm hadroproduction at the LHC have very large ($>100\%$ in some regions of the phase space) scale uncertainties. Furthermore most of the PDF fitting groups provide fits at NNLO accuracy. This prevents including existing data on charm and bottom hadroproduction in their state-of-the-art fits. In this context measurements of the total charm hadroproduction cross section would be beneficial, because they can be confronted in the fits with NNLO predictions~\cite{Baernreuther:2012ws,Czakon:2012zr,Czakon:2012pz,Czakon:2013goa} which have reduced scale uncertainties. However, no such measurements have been performed to date. On the other hand, ALICE~\cite{Acharya:2017jgo,Acharya:2019mgn}, ATLAS~\cite{Aad:2015zix} and LHCb~\cite{Aaij:2013mga,Aaij:2015bpa,Aaij:2016jht} experiments provided measurements of charm production in different kinematic regions which cover more a larger part of the phase space. One can reliably extract the total cross section by extrapolating these measurements to the full phase space. Below we perform such extrapolation, provide values for the total charm cross section at different center-of-mass energies and their ratios together with experimental and theoretical uncertainties arising from the extrapolation procedure, compare to theoretical predictions at NNLO obtained which are obtained using different PDF sets, and demonstrate how these data can help reducing PDF uncertainties.
+\subsection{NLO PDF fits with differential charm hadroproduction cross sections}
+%1) Qualitative discussion on possible outcome from the PROSA fit redone with the modified MCFM and all the rest the same: does it happens something to the fitted charm mass ? And the $\chi^2$ ? And the PDF uncertainty band ? 
+%I think this is not a new PROSA paper, which would indeed require to add new data in the fit, etc....but more an exercise, showing if using running mass, can have an impact or not. 
+%\\ 
+%\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
+%\\
+One of the possible applications of the calculations for heavy-quark hadroproduction with the \msbar mass definition could be PDF fits which use heavy-flavour measurements from the LHC to constrain the gluon distribution at low values of $x$~\cite{Zenaiev:2015rfa,Gauld:2015yia,Gauld:2016kpd}. Because of the large scale dependence of the NLO calculations for charm hadroproduction, in such fits it seems feasible to include only ratios of cross sections, which are constructed using measurements at different values of rapidity and/or transverse momentum, or at different centre-of-mass energies. As an example, in the PROSA analysis~\cite{Zenaiev:2015rfa} ratios of charm and bottom hadron production cross sections~\cite{Aaij:2013mga,Aaij:2013noa} as a function of rapidity to the cross section in the $3 < y < 3.5$ interval for each $p_T$ bin were used, together with the inclusive DIS data from HERA~\cite{Aaron:2009aa,Abramowicz:1900rp,Abramowicz:2014zub}. These ratios afforded a reduced scale dependence, but at the same time they have reduced sensitivity to the heavy-quark mass. We repeat the PROSA analysis using the \msbar heavy-quark masses both in the calculations of the DIS structure functions and charm and bottom hadroproduction cross sections, while all other settings are as in Ref.~\cite{Zenaiev:2015rfa}, and observe only small impact on $\chi^2$ and fitted PDFs, which are well within the uncertainties. Even these small differences are driven mainly by the change in the predictions for the HERA data, because the LHCb data in the format of the normalised cross sections do not provide notable sensitivity neither to the heavy-quark mass scheme, not to the value of the heavy-quark mass. As a result, the fitted \msbar and pole masses come out:
+\begin{equation}
+\begin{aligned}
+m_c(m_c) &= 1.17 \pm 0.05~\textrm{GeV},~~~~~~~~ &m_c^{\textrm{pole}} &= 1.26 \pm 0.06 ~\textrm{GeV},\\
+m_b(m_b) &= 3.98 \pm 0.14 ~\textrm{GeV},~~~~~~~~ &m_b^{\textrm{pole}} &= 4.19 \pm 0.14 ~\textrm{GeV}.
+\end{aligned}
+\label{eq:dztocc}
+\end{equation}
+The quoted uncertainties are fit uncertainties only.
+The \msbar masses are compatible with the results obtained in Refs.~\cite{Abramowicz:1900rp,Abramowicz:2014zub,Bertone:2016ywq,H1:2018flt} where the HERA data alone were analysed to determine the heavy-quark \msbar masses. They are also in a better agreement with the world average values~\cite{Tanabashi:2018oca}, than the pole masses, indicating that the latter carry a significant intrinsic theoretical uncertainty.
+
+\subsection{NNLO PDF fits with total charm hadroproduction cross section}
+%\\
+%\\
+%2) Inclusion of measurements of total cross-sections for charm hadroproduction
+%in (future) NLO and NNLO PDF fits: discussion at qualitative level. 
+%\\ 
+%\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
+%\\
+The NLO predictions for differential charm hadroproduction at the LHC have very large ($>100\%$ in some regions of the phase space) scale uncertainties. Furthermore most of the PDF fitting groups provide fits at NNLO accuracy. This prevents including existing data on charm and bottom hadroproduction in their state-of-the-art fits. In this context measurements of the total charm hadroproduction cross section would be beneficial, because they can be confronted in the fits with NNLO predictions~\cite{Baernreuther:2012ws,Czakon:2012zr,Czakon:2012pz,Czakon:2013goa} which have reduced scale uncertainties. However, no such measurements have been performed to date. On the other hand, ALICE~\cite{Acharya:2017jgo,Acharya:2019mgn}, ATLAS~\cite{Aad:2015zix} and LHCb~\cite{Aaij:2013mga,Aaij:2015bpa,Aaij:2016jht} experiments provided measurements of charm production in different kinematic regions which cover more than one half of the phase space. One can reliably extract the total cross section by extrapolating these measurements to the full phase space. The extrapolation procedure is similar to extracting reduced cross sections for charm production at HERA~\cite{H1:2018flt} from measurements in a fiducial phase space, which are then used in global PDF fits. Below we perform such extrapolation, provide values for the total charm cross section at different center-of-mass energies and their ratios together with experimental and theoretical uncertainties arising from the extrapolation procedure, compare to theoretical predictions at NNLO which are obtained using different PDF sets, and demonstrate how these data can help reducing PDF uncertainties.
 
 The existing most precise LHC measurements of charm production are summarised in Table~\ref{tab:charmdata}. The ALICE measurements at 5 and 7 TeV cover the central region $|y| < 0.5$, the LHCb measurements at 5, 7 and 13 TeV provide coverage of the forward region $2<y<4.5$, and the ATLAS measurement at 7 TeV essentially bridges the gap by providing data at $|\eta| < 2.1$. However, while both ALICE and LHCb provide measurements nearly in the full $p_T$ range starting from 0 GeV, ATLAS reports the cross sections only at $p_T > 3.5$ GeV, thus leaving the bulk of the corresponding $p_T$ kinematic range unmeasured. Furthermore, it turns out that the most precise data for ALICE and LHCb are available for \dz production, while this final state was not measured by ATLAS. Given these arguments, at 5 and 7 TeV we extrapolate ALICE and LHCb measurements of \dz production to the full phase space. In order to maintain least dependence on the theoretical predictions, both ALICE and LHCb measurements are extrapolated to nearby regions of $y$, namely to $0<|y|<1.5$ and $|y|>1.5$, respectively:
 \begin{equation}
@@ -284,9 +296,15 @@ K_{\textrm{LHCb}} = \frac{\sigma^{NLO}_{|y|>1.5}}{\sigma^{\textrm{NLO}}_{2<|y|<4
 \label{eq:extrapolation}
 \end{equation}
 Here $\sigma_{\textrm{ALICE}}$ and $\sigma_{\textrm{LHCb}}$ are the ALICE and LHCb data, respectively, and $\sigma^{NLO}$ is the theoretical prediction. 
-The factor $2$ in the second term takes into account that the LHCb data are provided for only $2<y<4.5$ and need to be extrapolated to $2<|y|<4.5$ (we take that the cross sections at $2<y<4.5$ and $-4.5<y<-2$ are equal).
- Also the measurements are extrapolated into the full range of $p_T$ (not shown in Eq.~\ref{eq:extrapolation} for brevity), which implies only $1\%$ correction for the LHCb data at 7 TeV provided for $p_T < 8$ GeV, and even smaller corrections for the other data sets. This procedure is used to obtain the total charm cross section at 5 and 7 TeV, while at 13 TeV we extrapolate solely the LHCb measurement since no other data are available at this energy. We also compute ratios of cross sections at different centre-of-mass energies $R_{7/5} = \sigma_{7~\textrm{TeV}} / \sigma_{5~\textrm{TeV}}$ and $R_{13/7} = \sigma_{13~\textrm{TeV}} / \sigma_{7~\textrm{TeV}}$ which benefit from partial cancellation of theoretical uncertainties.
-
+The factor $2$ in the second term takes into account that the LHCb data are provided for only $2<y<4.5$ and need to be extrapolated to $2<|y|<4.5$ (we exploit the symmetry around $y=0$ and take that the cross sections at $2<y<4.5$ and $-4.5<y<-2$ are equal).
+ Also the measurements are extrapolated into the full range of $p_T$ (not shown in Eq.~\ref{eq:extrapolation} for brevity), which implies only $1\%$ correction for the LHCb data at 7 TeV provided for $p_T < 8$ GeV, and even smaller corrections for the other data sets. This procedure is used to obtain the total cross section for \dz production at 5 and 7 TeV, while at 13 TeV we extrapolate solely the LHCb measurement since no other data are available at this energy. We calculate the total charm production cross section from the \dz production cross section dividing the latter by the fragmentation fraction from Ref.~\cite{Lisovyi:2015uqa}:
+\begin{equation}
+\sigma({c\bar{c}}) = \sigma({\dz}) / (2f(c \to \dz)),~~~f(c \to \dz) = 0.6141 \pm 0.0073.
+\label{eq:dztocc}
+\end{equation}
+The factor $2$ in Eq.~\ref{eq:dztocc} accounts that both $c$ and $\bar{c}$ fragment into charmed hadrons.
+The uncertainty on $f(c \to \dz)$ which amounts to $1\%$ is neglected.
+  We also compute ratios of cross sections at different centre-of-mass energies $R_{7/5} = \sigma_{7~\textrm{TeV}} / \sigma_{5~\textrm{TeV}}$ and $R_{13/7} = \sigma_{13~\textrm{TeV}} / \sigma_{7~\textrm{TeV}}$ which benefit from partial cancellation of theoretical uncertainties.
 \begin{table}
 \setlength{\tabcolsep}{8pt}
 \renewcommand{\arraystretch}{1.35}
@@ -306,11 +324,12 @@ The factor $2$ in the second term takes into account that the LHCb data are prov
 \label{tab:charmdata}
 \end{table}
 
-The theoretical prediction $\sigma^{NLO}$ are computed using the NLO predictions with the \msbar masses described in the previous sections, supplemented with phenomenological non-pertutbative fragmentation functions to describe the $c \to \dz$ transition. The factorisation and renormalisation scales are chosen to be $\mu_r = \mu_f = \sqrt{4m_c(m_c)^2+p_T^2}$ and varied by a factor of two up and down (both simultaneously and independently for $\mu_r$ and $\mu_f$) to estimate the uncertainties. The \msbar charm quark mass is set to $m_c(m_c) = 1.275 \pm 0.030$~GeV~\cite{Tanabashi:2018oca}. The proton is described by the PROSA PDF set~\cite{Zenaiev:2015rfa}. We chose this set because among all FFNS PDF sets which are available today the PROSA set is expected to have the most reliable gluon distribution at low $x$ thanks to the heavy-quark data used for its determination. Furthermore, to estimate the PDF uncertainties, the extrapolation is performed using the ABMP16~\cite{Alekhin:2018pai}, CT14~\cite{Dulat:2015mca}, MMHT2014~\cite{Harland-Lang:2014zoa}, JR14~\cite{Jimenez-Delgado:2014twa}, NNPDF3.1~\cite{Ball:2017nwa} and HERAPDF FF3A~\cite{Abramowicz:2015mha} NLO PDF sets, and the envelope covering the PROSA PDF uncertainties and the difference obtained using any of the additional PDF sets is constructed. This conservative procedure is essential, because the theoretical calculations for highest values of y involve the gluon PDF at very low values of x (up to $4\times 10^{-8}$) where it is not directly covered by data in any of the PDF fits (even in the PROSA fit which includes the charm data up to $y = 4.5$ as measured by LHCb). The fragmentation of charm quarks into \dz mesons is described by the Kartvelishvili function with $\alpha_K = 4.4 \pm 1.7$~\cite{Zenaiev:2015rfa}, while the fragmentation fraction $f(c \to \dz)$ cancels for the extrapolation factors in Eq.~\ref{eq:extrapolation}. All theoretical uncertainties are assumed to be fully correlated for cross sections in different kinematic regions and at different centre-of-mass energies. Robustness of the extrapolation procedure is checked by varying the boundary $y$ between the kinematic regions into which the ALICE and LHCb measurements are extrapolated by $\pm 0.5$ (at the same time, this variation tests consistency of the ALICE and LHCb data). Furthermore, we did another check of the extrapolation procedure by computing predictions for the ALICE and LHCb data using the POWHEGBOX + PYTHIA6 framework which provide NLO predictions matched to parton showers [Maria could write more details here] and found them to be consistent with our NLO calculations within the theoretical uncertainties.
+The theoretical prediction $\sigma^{NLO}$ are computed using the NLO predictions with the \msbar masses described in the previous sections, supplemented with phenomenological non-pertutbative fragmentation functions to describe the $c \to \dz$ transition. The factorisation and renormalisation scales are chosen to be $\mu_r = \mu_f = \sqrt{4m_c(m_c)^2+p_T^2}$ and varied by a factor of two up and down (both simultaneously and independently for $\mu_r$ and $\mu_f$) to estimate the uncertainties. The \msbar charm quark mass is set to $m_c(m_c) = 1.275 \pm 0.030$~GeV~\cite{Tanabashi:2018oca}. The proton is described by the PROSA PDF set~\cite{Zenaiev:2015rfa}. We chose this set because among all FFNS PDF sets which are available today the PROSA set is expected to have the most reliable gluon distribution at low $x$ thanks to the heavy-quark data used for its determination. Furthermore, to estimate the PDF uncertainties, the extrapolation is performed using the ABMP16~\cite{Alekhin:2018pai}, CT14~\cite{Dulat:2015mca}, MMHT2014~\cite{Harland-Lang:2014zoa}, JR14~\cite{Jimenez-Delgado:2014twa}, NNPDF3.1~\cite{Ball:2017nwa} and HERAPDF FF3A~\cite{Abramowicz:2015mha} NLO PDF sets, and the envelope covering the PROSA PDF uncertainties and the difference obtained using any of the additional PDF sets is constructed. This conservative procedure is essential, because the theoretical calculations for highest values of y involve the gluon PDF at very low values of x (up to $4\times 10^{-8}$) where it is not directly covered by data in any of the PDF fits (even in the PROSA fit which includes the charm data up to $y = 4.5$ as measured by LHCb). The fragmentation of charm quarks into \dz mesons is described by the Kartvelishvili function with $\alpha_K = 4.4 \pm 1.7$~\cite{Zenaiev:2015rfa}, while the fragmentation fraction $f(c \to \dz)$ cancels for the extrapolation factors in Eq.~\ref{eq:extrapolation}. All theoretical uncertainties are assumed to be fully correlated for cross sections in different kinematic regions and at different centre-of-mass energies. Robustness of the extrapolation procedure is checked by varying the boundary $y$ between the kinematic regions into which the ALICE and LHCb measurements are extrapolated by $\pm 0.5$ (at the same time, this variation tests consistency of the ALICE and LHCb data). Furthermore, we did another check of the extrapolation procedure by computing predictions for the ALICE and LHCb data using the POWHEGBOX + PYTHIA6 framework which provide NLO predictions matched to parton showers and found them to be consistent with our NLO calculations within the theoretical uncertainties.
 
 The results of extrapolation are reported in Table~\ref{tab:extrap}. The scale, mass, PDF and fragmentation uncertainties are added in quadrature to obtain the total theoretical uncertainty assigned to the extrapolated results. The experimental uncertainties of the input data are propagated to the extrapolated cross sections and reported separately. The experimental uncertainties of the input data sets are assumed to be fully uncorrelated. %The computed extrapolation factors in Eq.~\ref{eq:extrapolation} amount to $K_{\textrm{ALICE}} \approx 2.5$ and $K_{\textrm{LHCb}} \approx 1.5$\footnote%
 %\footnote{Here we do not consider extrapolation of the LHCb measurements from $2<y<4.5$ to $2<|y|<4.5$.}, respectively.
 The experimental and theoretical extrapolation uncertainties are of the same size. The total uncertainties are obtained by adding the experimental and theoretical uncertainties in quadrature, and amount to $\approx 10\%$.
+Our value for the total charm cross section at 7 TeV is in agreement with the extrapolated cross sections reported in Refs.~\cite{Aad:2015zix,Acharya:2019mgn,Bhattacharya:2015jpa} within uncertainties.
 
 The extrapolated cross sections and their ratios are compared to NNLO predictions obtained using different PDF sets. Namely, we used the ABMP16~\cite{Alekhin:2017kpj}, CT14~\cite{Dulat:2015mca}, MMHT2014~\cite{Harland-Lang:2014zoa}, JR14~\cite{Jimenez-Delgado:2014twa}, NNPDF3.1~\cite{Ball:2017nwa} and HERAPDF~\cite{Abramowicz:2015mha} NNLO PDF sets. The cross sections are computed using the HATHOR program~\cite{Aliev:2010zk} interfaced in xFitter~\cite{Alekhin:2014irh}.  The factorisation and renormalisation scales are chosen to be $\mu_r = \mu_f = 2m_c(m_c)$ and varied by a factor of two up and down (both simultaneously and independently for $\mu_r$ and $\mu_f$) to estimate the uncertainties. The \msbar charm quark mass is set to $m_c(m_c) = 1.275$~GeV~\cite{Tanabashi:2018oca}. Figure~\ref{fig:extrap} shows the extrapolated cross sections and their ratios compared to NNLO predictions. For the NNLO predictions, separately the theoretical uncertainty which arise from the scale variations and the PDF uncertainty is shown. All theoretical predictions agree with the data within uncertainties, but noticeably the MMHT2014, HERAPDF2.0 and CT14 PDF sets have uncertainties which are larger than both scale and data extrapolation uncertainties for some of the observables. In particular, for the cross sections at 13~TeV the predictions of the MMHT2014 and HERAPDF2.0 sets are consistent with negative values within uncertainties, while the CT14 predictions has a large positive uncertainty which greatly exceeds our extrapolated cross section. Therefore, these PDF sets could benefit from data on charm production cross sections or their ratios included in the fits. Remarkably, also the scale uncertainties appear to be different when using different PDF sets. Among the considered observables, the most conclusive one is $R_{7/5}$ for which both data extrapolation and theoretical scale uncertainties are moderate ($\approx 10\%$). Our extrapolated value for this observable can be used in future NNLO PDF fits to constrain the gluon PDF at low $x$. The other ratio $R_{13/7}$ has a larger extrapolation uncertainty suffering from the lack of experimental measurements of charm production in the central rapidity region at 13 TeV.
 
